--- a/trunk/Common/ServiceStack.Common/ServiceStack.CacheAccess.Providers.Tests/ServiceStack.CacheAccess.Providers.Tests.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.CacheAccess.Providers.Tests/ServiceStack.CacheAccess.Providers.Tests.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{EF5C737D-9D69-4844-AE09-FA706AD7AB91}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -118,6 +118,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="sqlite3.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
