--- a/trunk/Common/ServiceStack.Common/ServiceStack.OrmLite/ServiceStack.OrmLite.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.OrmLite/ServiceStack.OrmLite.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{96179AC6-F6F1-40C3-9FDD-4F6582F54C5C}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -48,6 +48,7 @@
     <Compile Include="ExpressionPropertyInvoker.cs" />
     <Compile Include="FieldDefinition.cs" />
     <Compile Include="IPropertyInvoker.cs" />
+    <Compile Include="ModelDefinition.cs" />
     <Compile Include="OrmLiteConfig.cs" />
     <Compile Include="OrmLiteBasicPersistenceProvider.cs" />
     <Compile Include="IOrmLiteDialectProvider.cs" />
