--- a/trunk/Common/ServiceStack.Common/ServiceStack.ServiceModel.Tests/ServiceStack.ServiceModel.Tests.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.ServiceModel.Tests/ServiceStack.ServiceModel.Tests.csproj
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{A5646013-C243-453F-A2B6-3B6870A9637D}</ProjectGuid>
     <OutputType>Library</OutputType>
