--- a/trunk/Common/ServiceStack.Common/ServiceStack.Common.Tests/ServiceStack.Common.Tests.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.Common.Tests/ServiceStack.Common.Tests.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Expressions\DelegateFactoryTests.cs" />
     <Compile Include="Expressions\ExpressionTests.cs" />
+    <Compile Include="Perf\AdhocFastPerfTests.cs" />
     <Compile Include="Perf\PerfTestBase.cs" />
     <Compile Include="Perf\StringConverterUtilsPerf.cs" />
     <Compile Include="StreamExtensions.cs" />
