--- a/trunk/Common/ServiceStack.Common/ServiceStack.Common.Tests/ServiceStack.Common.Tests.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.Common.Tests/ServiceStack.Common.Tests.csproj
@@ -63,8 +63,9 @@
     <Compile Include="Expressions\DelegateFactoryTests.cs" />
     <Compile Include="Expressions\ExpressionTests.cs" />
     <Compile Include="Perf\AdhocFastPerfTests.cs" />
+    <Compile Include="Perf\ToStringPerf.cs" />
     <Compile Include="Perf\PerfTestBase.cs" />
-    <Compile Include="Perf\StringConverterUtilsPerf.cs" />
+    <Compile Include="Perf\StringParsePerf.cs" />
     <Compile Include="StreamExtensions.cs" />
     <Compile Include="StringExtensionTests.cs" />
     <Compile Include="StringConverterUtilsTests.cs" />
