--- a/trunk/Common/ServiceStack.Common/ServiceStack.Common.Tests/ServiceStack.Common.Tests.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.Common.Tests/ServiceStack.Common.Tests.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Support\ModelWithFieldsOfDifferentTypes.cs" />
     <Compile Include="Support\ModelWithOnlyStringFields.cs" />
     <Compile Include="Support\PathInfoTests.cs" />
+    <Compile Include="TypeToStringTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ServiceStack.Common\ServiceStack.Common.csproj">
