--- a/trunk/Common/ServiceStack.Common/ServiceStack.OrmLite/ServiceStack.OrmLite.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.OrmLite/ServiceStack.OrmLite.csproj
@@ -59,6 +59,7 @@
     <Compile Include="OrmLiteReadExtensions.cs" />
     <Compile Include="OrmLiteUtilExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropertyInvoker.cs" />
     <Compile Include="ReflectionPropertyInvoker.cs" />
   </ItemGroup>
   <ItemGroup>
