--- a/trunk/Common/ServiceStack.Common/ServiceStack.OrmLite.Tests/ServiceStack.OrmLite.Tests.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.OrmLite.Tests/ServiceStack.OrmLite.Tests.csproj
@@ -91,6 +91,8 @@
     <Compile Include="Models\NorthwindData.cs" />
     <Compile Include="Models\Northwind.models.cs" />
     <Compile Include="Models\NorthwindResources.cs" />
+    <Compile Include="Models\OrderDetailBlob.cs" />
+    <Compile Include="Models\OrderBlob.cs" />
     <Compile Include="Models\SampleOrderLine.cs" />
     <Compile Include="OrmLiteComplexTypesTests.cs" />
     <Compile Include="Models\ModelWithComplexTypes.cs" />
