--- a/Common/ServiceStack.Common/ServiceStack.Redis.Tests/ServiceStack.Redis.Tests.csproj
+++ b/Common/ServiceStack.Common/ServiceStack.Redis.Tests/ServiceStack.Redis.Tests.csproj
@@ -53,6 +53,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RedisClientListTests.cs" />
+    <Compile Include="RedisClientSetTests.cs" />
     <Compile Include="RedisClientTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RedisPersistenceProviderTests.cs" />
