--- a/trunk/Common/ServiceStack.Common/ServiceStack.Redis/ServiceStack.Redis.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.Redis/ServiceStack.Redis.csproj
@@ -49,9 +49,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RedisClientSet.cs" />
     <Compile Include="RedisClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RedisClient.Set.cs" />
+    <Compile Include="RedisClient.List.cs" />
+    <Compile Include="RedisClientList.cs" />
+    <Compile Include="RedisClientLists.cs" />
+    <Compile Include="RedisClientSets.cs" />
     <Compile Include="RedisPersistenceProvider.cs" />
   </ItemGroup>
   <ItemGroup>
