--- a/trunk/Common/Northwind.Benchmarks/ServiceStack.OrmLite.TestsPerf/ServiceStack.OrmLite.TestsPerf.csproj
+++ b/trunk/Common/Northwind.Benchmarks/ServiceStack.OrmLite.TestsPerf/ServiceStack.OrmLite.TestsPerf.csproj
@@ -33,21 +33,9 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Jayrock, Version=0.9.8316.0, Culture=neutral">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Lib\Jayrock.dll</HintPath>
-    </Reference>
-    <Reference Include="Jayrock.Json, Version=0.9.8316.0, Culture=neutral">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Lib\Jayrock.Json.dll</HintPath>
-    </Reference>
     <Reference Include="Mono.Data.Sqlite, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\Mono.Data.Sqlite.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json.Net20, Version=3.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Lib\Newtonsoft.Json.Net20.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -56,10 +44,6 @@
     <Reference Include="Platform, Version=1.0.0.341, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\Platform.dll</HintPath>
-    </Reference>
-    <Reference Include="protobuf-net, Version=1.0.0.278, Culture=neutral, PublicKeyToken=257b51d87d2e4d67, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Lib\protobuf-net.dll</HintPath>
     </Reference>
     <Reference Include="ServiceStack, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -93,10 +77,8 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Model\SampleOrderLine.cs" />
-    <Compile Include="PerfTests\TextDeserializerPerfTests.cs" />
     <Compile Include="PerfTests\NorthwindPerfTests.cs" />
     <Compile Include="PerfTests\OrmLitePerfTests.cs" />
-    <Compile Include="PerfTests\TextSerializerPerfTests.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scenarios\Northwind\SelectNorthwindDataScenario.cs" />
@@ -109,11 +91,6 @@
     <Compile Include="Scenarios\Text\NorthwindCustomerToStringScenario.cs" />
     <Compile Include="Scenarios\Text\NorthwindSupplierToStringScenario.cs" />
     <Compile Include="Scenarios\Text\NorthwindOrderToStringScenario.cs" />
-    <Compile Include="Tests\NorthwindDatabaseSerializtionPerf.cs" />
-    <Compile Include="Tests\SerializationTestBase.cs" />
-    <Compile Include="Tests\SingleModelSerializationPerf.cs" />
-    <Compile Include="Tests\TextTestBase.cs" />
-    <Compile Include="Tests\TypeToStringTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Northwind.Common\Northwind.Common.csproj">
@@ -127,6 +104,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\PerfTests\" />
+    <Folder Include="Tests\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
