--- a/trunk/Common/ServiceStack.Redis/ServiceStack.Redis.Tests/ServiceStack.Redis.Tests.csproj
+++ b/trunk/Common/ServiceStack.Redis/ServiceStack.Redis.Tests/ServiceStack.Redis.Tests.csproj
@@ -33,15 +33,15 @@
   <ItemGroup>
     <Reference Include="Northwind.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Lib\Northwind.Common.dll</HintPath>
+      <HintPath>..\..\ServiceStack.Common\Lib\Northwind.Common.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Lib\nunit.framework.dll</HintPath>
+      <HintPath>..\..\ServiceStack.Common\Lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="ServiceStack.Interfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Lib\ServiceStack.Interfaces.dll</HintPath>
+      <HintPath>..\..\ServiceStack.Common\Lib\ServiceStack.Interfaces.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -57,11 +57,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NorthwindPerfTests.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="RedisClientListTests.cs" />
     <Compile Include="RedisClientSetTests.cs" />
     <Compile Include="RedisClientTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="NorthwindPerfTests.cs" />
     <Compile Include="RedisPersistenceProviderTests.cs" />
   </ItemGroup>
   <ItemGroup>
